test/src/e2e_vm_tests/test_programs/should_fail/generics_unhelpful_error/src/main.sw
script;

struct DoubleIdentity<T, F> {
  first: T,
  second: F,
  third: u64
}

fn f(a: DoubleIdentity<u64>) {
}

fn main() -> u32 {
  1u32
}
